--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,7 +37,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 # Resource Handling
 
-file(GLOB_RECURSE resources "./*.png" "res/*.png" "res/*.frag" "res/*.vert" "res/*.glsl")
+file(GLOB_RECURSE resources "./*.png" "./*.cgv" "./*.cgf" "res/*.png" "res/*.frag" "res/*.vert" "res/*.glsl")
 set(data_VPKSHADOW "")
 if(BUILD_VITA)
   foreach(resource ${resources})
