Double buffer draw calls, update with latest version of the renderer from TheXTech.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,7 @@ set(VITA_VERSION  "01.00")
 
 if(BUILD_VITA)
   set(VITA_MKSFOEX_FLAGS "${VITA_MKSFOEX_FLAGS} -d PARENTAL_LEVEL=1")
-  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DVITA -g -O0 -Wall -fno-lto -ftree-vectorize")
+  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DVITA -g -Wall -O0 -fno-lto -ftree-vectorize")
 else()
   set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS}  -g -O0 -fno-lto -ftree-vectorize")  
 endif()
@@ -54,6 +54,11 @@ add_executable(${PROJECT_NAME}
   src/main.c
   src/vgl_renderer.c
 )
+
+if(CMAKE_BUILD_TYPE MATCHES Debug)
+  message("Debug.")
+  target_compile_definitions(${PROJECT_NAME} PUBLIC -DDEBUG_BUILD)
+endif()
 
 if(BUILD_VITA)
   target_link_libraries(${PROJECT_NAME}
