Building for Vita with input module now.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,13 +49,21 @@ if(BUILD_VITA)
   endforeach()
 endif()
 
-#message("VPK DATA: ${data_VPKSHADOW}")
-
-add_executable(${PROJECT_NAME}
-  # src/main.c
-  # src/vgl_renderer.c,
+set(SRC_FILES
   src/version2/main.c
   src/version2/vgl3d_gl2es.c
+)
+
+if(VITA)
+  # PS Vita platform specifics.
+  list(APPEND SRC_FILES
+    src/version2/input/tesla_input_vita.c
+  )
+  message("Sources: ${SRC_FILES}")
+endif()
+
+add_executable(${PROJECT_NAME}
+  ${SRC_FILES}
 )
 
 if(CMAKE_BUILD_TYPE MATCHES Debug)
@@ -67,6 +75,7 @@ if(BUILD_VITA)
   target_link_libraries(${PROJECT_NAME}
     vitaGL
     debugnet
+    SceCtrl_stub
     SceRtc_stub
     SceNetCtl_stub
     SceNet_stub
