Put resources in the res folder where they belong.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "files.associations": {
         "vgl_renderer_types.h": "c",
         "vgl3d_textures.h": "c",
-        "vgl3d.h": "c"
+        "vgl3d.h": "c",
+        "cgltf.h": "c",
+        "vgl3d_metal_private.h": "c"
     }
 }
